Aggiunti un paio di esercizi

--- a/TrucchiTabellaCaratteri.tex
+++ b/TrucchiTabellaCaratteri.tex
@@ -451,5 +451,10 @@
 		\item Sia $G$ un gruppo finito e $\rho$ una sua rappresentazione di dimensione finita. Dimostrare allora che $\rho$ è fedele (ovvero $\rho(g) = \Id \implies g = e$) $\sse \exists m \in \bbN $ tale che tutte le rappresentazioni irriducibili di $G$ compaiono nella decomposizione in irriducibili di $\rho^{\otimes m}$, dove si intende il prodotto tensore di $\rho$ con sè stessa $m$ volte.
 		
 		\item Indichiamo con $\Dimmax G$ la massima dimensione di una rappresentazione irriducibile di $G$. Sia allora $H$ un qualsiasi sottogruppo di $G$. Allora vale che $\Dimmax G \le \Dimmax H \cdot [G : H]$, dove $[G : H]$ è l'indice di $H$ in $G$.
+
+		\item $G$ gruppo finito. $\rho$ rappresentazione irriducibile e fedele. Allora $Z(G)$ è ciclico.
+		
+		\item $g \in G$ elemento di ordine $2$ allora si ha $\chi_\rho(g) \in \bbZ$ e inoltre $\chi_\rho(g) \equiv \chi_\rho(e) (2)$. \\
+			$g \in G$ elemento di ordine $3$ coniugato all'inverso. Allora $\chi_\rho(g) \in \bbZ$ e inoltre $\chi_\rho(g) \equiv \chi_\rho(e) (3)$.
 	\end{itemize}
 \end{document}
