--- a/stdmdoc.cls
+++ b/stdmdoc.cls
@@ -169,6 +169,10 @@
 \def\mydefalllett#1{\ifx#1\mydefalllett\else\mydeflett#1\expandafter\mydefalllett\fi}
 \mydefalllett ABCDEFGHIJKLMNOPQRSTUVWXYZ\mydefalllett
 
+\def\mydeffrakmath#1{\expandafter\def\csname k#1\endcsname{\mathfrak{#1}}}
+\def\mydefallfrak#1{\ifx#1\mydefallfrak\else\mydeffrakmath#1\expandafter\mydefallfrak\fi}
+\mydefallfrak abcdefghijklmnopqrstuvwxyz\mydefallfrak
+
 \def\mydefgreek#1{\expandafter\def\csname bl#1\endcsname{\text{\boldmath$\mathbf{\csname #1\endcsname}$}}}
 \def\mydefallgreek#1{\ifx\mydefallgreek#1\else\mydefgreek{#1}%
    \lowercase{\mydefgreek{#1}}\expandafter\mydefallgreek\fi}
@@ -192,6 +196,8 @@
 	}
 }
 
+\newcommand{\dde}[1]{\frac{\text{ d}}{\text{ d} #1}}
+
 \NewDocumentCommand{\dpar}{gg}{
 	\IfNoValueTF{#1}
 		{\partial}
@@ -212,7 +218,7 @@
 	\newcommand{\oc}[1]{\widehat{#1}}
 	\newcommand{\tc}{\mbox{ t.c. }}
 
-	\newcommand{\norma}[1]{\mid\mid #1 \mid\mid}
+	\newcommand{\norm}[1]{\| {#1} \|}
 	\newcommand{\abs}[1]{\mid #1 \mid}
 	\newcommand{\scal}[2]{\langle #1 \mid #2 \rangle}
 	\newcommand{\floor}[1]{\lfloor #1 \rfloor}
